--- a/imohsenb.iso8583/imohsenb.iso8583.csproj
+++ b/imohsenb.iso8583/imohsenb.iso8583.csproj
@@ -2,7 +2,7 @@
 
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;netstandard2.0;net48;net47;net46;net45</TargetFrameworks>
+    <TargetFramework>net6.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/imohsenb/ISO8583-Message-Client-DotNet</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/CBidis/CSharp8583/blob/master/LICENSE</PackageLicenseUrl>
